<resources>
    <string name="app_name">NutriCampus</string>
    <string name="switch_ativo">Ativo</string>
    <string name="switch_inativo">Inativo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>

    <string name="logout_text">Sair</string>

    <string name="register_user">Cadastro Usuário</string>
    <string name="save">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancel">Cancelar</string>

    <string name="entrar">Entrar</string>
    <string name="recuperar_senha">Recuperar senha</string>

    <string name="alter_senha">Caso altere a senha, ocorrerá logout em sua conta.</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_adicionar_propriedade">Adicionar uma propriedade</string>
    <string name="menu_adicionar_animal">Adicionar um animal</string>
    <string name="menu_visualizar_animais">Visualizar animais</string>
    <string name="menu_historico">Ver histórico de dados</string>
    <string name="menu_excluir">Excluir</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_relatorio">Relatório</string>

    <string name="link_novo_cadastro">Não é cadastrado? <b>Crie sua conta</b></string>
    <string name="link_esqueceu_senha">Esqueceu sua senha?</string>

    <string name="msg_bem_vindo">Bem-vindo ao NutriCampus</string>
...
    <string name="msg_completar_cadastro">Complete %1$s com os demais dados</string>

    <string name="msg_cadastro_salvo">Cadastro realizado com sucesso</string>
    <string name="msg_cadastre_proprietario">Cadastre um proprietário</string>
    <string name="msg_cadastre_propriedade">Cadastre uma propriedade</string>
    <string name="msg_spinner_proprietario">Selecione um proprietário</string>
    <string name="msg_spinner_propriedade">Procure uma propriedade</string>

    <string name="msg_excluir_propriedade_sucesso">Propriedade removida com sucesso </string>
    <string name="msg_excluir_proprietario_sucesso">Proprietário removido com sucesso </string>
    <string name="msg_excluir_composto_sucesso">Composto removido com sucesso </string>
    <string name="msg_excluir_dieta_sucesso">Dieta removida com sucesso </string>
    <string name="msg_excluir_animal_sucesso">Animal removido com sucesso </string>
...
    <string name="campo_proprietario">Nome do Proprietário</string>
    <string name="campo_nome_proprietario">Proprietário</string>

    <string name="campo_infor_recupera_senha">Informe seus dados e enviaremos um e-mail com a sua senha para o e-mail cadastrado</string>

    <string name="campo_peso">Peso (kg)</string>
    <string name="campo_natimorto">Natimorto</string>

    <string name="msg_senha_enviada">Senha enviada por e-mail</string>
    <string name="msg_sem_internet">Infelizmente não foi detectada uma conexão com a internet</string>
    <string name="menu_ver_producao_leite">Ver produção de leite</string>
    <string name="menu_ver_prole">Ver prole</string>
    <string name="msg_selecione_propriedade">Por favor, selecione uma propriedade cadastrada.</string>
    <string name="text_floating_propriedade">Propriedade</string>
    <string name="text_floating_proprietarios">Proprietários</string>

    <string name="campo_composto">Nome do Composto</string>
    <string name="campo_tipo">Tipo</string>
...
