<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tela_cadastro_prole"
    android:minWidth="300dp"
    android:minHeight="200dp"
    tools:context=".activities.CadastroProleActivity">

    <EditText
        android:id="@+id/input_id_prole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:inputType="" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp">

        <CheckBox
            android:id="@+id/check_natimorto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="18sp"
            android:text="@string/campo_natimorto"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:onClick="onCheckNatimortoClicked" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_peso_prole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/campo_peso"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_data_nascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_data_calendario"
                android:drawableEnd="@drawable/ic_data_calendario"
                android:hint="@string/campo_data_nascimento"
                android:inputType="date"
                android:focusable="false"
                android:onClick="showDatePickerDialogOnClick" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_salvar_prole"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="18dp"
                android:onClick="salvar"
                android:padding="12dp"
                android:text="@string/save" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_cancelar"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="18dp"
                android:onClick="cancelarOnClick"
                android:padding="12dp"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
