<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nutricampus.app.activities.ListaProleActivity"
    android:background="#e4e4e4">

    <include layout="@layout/content_lista_prole" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_add_prole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_light" />

</android.support.design.widget.CoordinatorLayout>
